tests/error/poly_errors/arg_mismatch8.err
Error: Type mismatch (at $FILE:14:6)
   | 
12 | def main(x: float) -> None:
13 |     f = foo[int]
14 |     f(x)
   |       ^ Expected argument of type `int`, got `float`

Guppy compilation failed due to 1 previous error
